--- a/demo/package.json
+++ b/demo/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "cross-env": "^7.0.3",
     "less": "^4.1.2",
@@ -58,6 +59,7 @@
     "@types/react-router-dom": "^5.1.9",
     "axios": "^0.24.0",
     "browser-image-compression": "^1.0.17",
+    "react-syntax-highlighter": "^15.6.6",
     "dayjs": "^1.11.11",
     "file-saver": "^2.0.5",
     "final-form": "^4.20.4",
