--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
   "name": "easy-email",
   "scripts": {
-    "install-all": "lerna exec -- pnpm install && cd demo && pnpm install",
-    "vercel-install": "lerna exec -- pnpm install && cd demo && pnpm install",
-    "build": "pnpm run build:core && pnpm run build:editor && pnpm run build:extensions",
-    "build:core": "cd packages/easy-email-core && pnpm run build",
-    "build:editor": "cd packages/easy-email-editor && pnpm run build",
-    "build:extensions": "cd packages/easy-email-extensions && pnpm run build",
-    "dev": "cd demo && pnpm run dev",
-    "demo": "cd demo && pnpm run build",
-    "demo2": "cd nextjs-demo && pnpm run build",
-    "test": "pnpm run test:core && pnpm run test:extensions",
-    "test:core": "cd packages/easy-email-core && pnpm run test",
-    "test:extensions": "cd packages/easy-email-extensions && pnpm run test",
+    "install-all": "lerna exec -- npm install && cd demo && npm install",
+    "vercel-install": "lerna exec -- npm install && cd demo && npm install",
+    "build": "npm run build:core && npm run build:editor && npm run build:extensions",
+    "build:core": "cd packages/easy-email-core && npm run build",
+    "build:editor": "cd packages/easy-email-editor && npm run build",
+    "build:extensions": "cd packages/easy-email-extensions && npm run build",
+    "dev": "cd demo && npm run dev",
+    "demo": "cd demo && npm run build",
+    "demo2": "cd nextjs-demo && npm run build",
+    "test": "npm run test:core && npm run test:extensions",
+    "test:core": "cd packages/easy-email-core && npm run test",
+    "test:extensions": "cd packages/easy-email-extensions && npm run test",
     "translate": "ts-node scripts/translate.ts",
-    "lint": "lerna exec -- pnpm run format"
+    "lint": "lerna exec -- npm run format"
   },
   "dependencies": {
+    "@arco-design/web-react": "^2.66.6",
+    "@arco-themes/react-easy-email-pro": "0.0.1",
     "@sendgrid/mail": "^7.7.0",
     "@types/file-saver": "^2.0.5",
     "cloudinary": "^1.41.2",
+    "easy-email-core": "^4.16.4",
+    "easy-email-editor": "^4.16.3",
+    "easy-email-extensions": "^4.16.4",
+    "easy-email-pro-core": "^1.51.8",
+    "easy-email-pro-editor": "^1.51.8",
+    "easy-email-pro-kit": "^1.51.8",
+    "easy-email-pro-theme": "^1.51.8",
     "easy-localized-translation": "^1.1.0",
     "file-saver": "^2.0.5",
     "lerna": "^4.0.0",
     "liquidjs": "^9.34.1",
-    "posthog-js": "^1.76.0"
+    "mjml-browser": "^4.16.1",
+    "posthog-js": "^1.76.0",
+    "react-final-form": "^7.0.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "slate": "^0.118.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.117.4"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
